# MS-Data-Science

./: .gitignore  Data Engineer Action Plan.md  README.md
MSDS630/: Week 5 Activity 2.docx  (+4 more)
MSDS630/PipelineProject1/: aggregation_results.txt  api_client.py  create_schema.py  main.py  parks_dw.db  pyproject.toml  schema.sql
MSDS650_Data Analytics/: main.py  pyproject.toml
MSDS650_Data Analytics/Week1/: Week1_Assignment.py  requirements.txt
MSDS650_Data Analytics/Week2/: Flores_2_warmup.py  Flores_Assignment_2.py
MSDS650_Data Analytics/Week2/Learning/: 2_warmup.py  DescriptiveStatistics_ConceptsGuide.py
MSDS650_Data Analytics/Week3/: 3_Assignment.py  Flores_Assignment3.py
MSDS650_Data Analytics/Week3/Learning/: 3_EDA.py  3_Warmup.py  EDA_Concepts_Guide.md
MSDS650_Data Analytics/Week4/: 4_Hypthesis_Testing.py  hypothesis_testing_reference.md
MSDS650_Data Analytics/Week4/assing_wk4/: 4_Assignment.py  Flores_4_Assignment.py
MSDS650_Data Analytics/Week4/warmup_wk4/: Flores_week4_warmup.py  heart_disease.data  warmup_wk4.py
MSDS650_Data Analytics/Week5/assignment/: Assignment_week5.py  Flores_Assignment_week5.py
MSDS650_Data Analytics/Week5/learning/: 5_Supervised_Machine_Learning.py  supervised_ml_concepts.py
MSDS650_Data Analytics/Week5/warmup/: Flores_Warmup_wk5.py  Warmup_wk5.py
MSDS650_Data Analytics/Week6/: 6_Unsupervised_ML_Concepts.py
MSDS650_Data Analytics/Week6/assignment/: Assignment_6.py  Flores_Assignment_6.py
MSDS650_Data Analytics/Week7/: wk7_concepts_guide.py
MSDS650_Data Analytics/Week8/: 8_Text_Analytics_Concepts_Guide.py
(+200 files in other folders)
