[project]
name = "msds650-data-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "marimo[recommended]>=0.21.1",
    "matplotlib>=3.10.8",
    "pyodbc>=5.3.0",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
